--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.5",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
