--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "video.js": "^7.7.5",
+    "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.5",
